Continued to Sharpen the Site

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
 
         <!-- LOGO 1 -->
-      	<div class="logos large-3 medium-3 small-3 columns"><a href="index.html"><img src="img/logo.png" title="Cordova Elementary School" alt="Cordova Elementary School" border="0"></a></div>
+      	<div class="logos large-3 medium-3 small-3 columns"><a href="index.html"><img src="img/logo2.png" title="Cordova Elementary School" alt="Cordova Elementary School" border="0"></a></div>
 
           <!-- NAVIGATION 1 -->
           <nav class="top-bar large-9 small-9 columns" data-topbar>
@@ -41,43 +41,16 @@
             <section class="top-bar-section">
             	<ul id="headMenu">
               	<li id="linkHome" class="currentLink slideUnder" title="Cordova Elementary Home" alt="Home"><a href="#home">Home</a></li>
-              	<li id="linkNews" class="slideUnder" title="News/Events Cordova Elementary" alt="News/Events"><a href="#mission" target="_blank">Announcements/Calendar</a></li>
+              	<li id="linkNews" class="slideUnder" title="News/Events Cordova Elementary" alt="News/Events"><a href="#quickLink" target="_blank">Announcements/Calendar</a></li>
                 <li id="linkResources" class="slideUnder" title="Cordova Elementary Resources" alt="Resources"><a href="#global" target="_blank">Resources</a></li>
               	<li class="slideUnder" title="Cordova Elementary Staff" alt="Staff"><a href="" target="_blank">Staff</a></li>
                 <li class="slideUnder" title="About Cordova Elementary" alt="About"><a href="" target="_blank">About</a></li>
-             		<li id="linkContact" class="slideUnder" title="Contact Cordova Elementary" alt="Contact"><a href="#contact">Contact</a></li>
+             		<li id="linkContact" class="slideUnder" title="Contact Cordova Elementary" alt="Contact"><a href="#footer">Contact</a></li>
                 <li><img src="img/scs-log-small.png" title="Shelby County Schools" alt="Shelby County Schools"></li>
               </ul>
             </section>
           </nav>
       </header>
-
-
-      <!-- <header id="header2" class="headChange">
-
-        <div class="logos large-3 medium-3 small-3 columns"><a href="index.html"><img src="img/logo.png" title="Cordova Elementary School" alt="Cordova Elementary School" border="0"></a></div>
-
-
-          <nav class="top-bar large-9 small-9 columns" data-topbar>
-          	<ul class="title-area">
-              <li class="name"></li>
-              <li class="toggle-topbar menu-icon"><a href="#">Menu<span><div class="fi-list"></div></span></a></li>
-            </ul>
-
-            <section class="top-bar-section">
-            	<ul id="headMenu">
-            	  <li id="linkHome" class="currentLink slideUnder" title="Cordova Elementary Home" alt="Home"><a href="#home">Home</a></li>
-                <li id="linkNews" class="slideUnder" title="News/Events Cordova Elementary" alt="News/Events"><a href="#mission" target="_blank">News/Events</a></li>
-              	<li id="linkSupply" class="slideUnder" title="Supply List Cordova Elementary" alt="Supply List"><a href="#global" target="_blank">Supply List</a></li>
-                <li id="linkQuick" class="slideUnder" title="Quick Links" alt="Quick Links"><a href="#quick-twit" target="_blank">Quick Links</a></li>
-                <li class="slideUnder" title="Cordova Elementary Resources" alt="Resources"><a href="" target="_blank">Resources</a></li>
-                <li class="slideUnder" title="About Cordova Elementary" alt="About"><a href="">About</a></li>
-                <li id="linkContact" class="slideUnder" title="Contact Cordova Elementary" alt="Contact"><a href="#contact">Contact</a></li>
-                <li><img src="img/scs-log-small.png" title="Shelby County Schools" alt="Shelby County Schools Greater Schools, Greater Communities"></li>
-              </ul>
-            </section>
-          </nav>
-      </header> -->
 
 
 
@@ -94,31 +67,6 @@
                       <img src="img/graphicRed.png" border="0">
                     </div>
                     <h2>Home of the cougar cubs</h2>
-
-                    <!-- <div id="buttonsWrap" class="large-12 large-centered small-12 columns">
-                      <div class="buttons large-3 small-12 columns end" title="Cordova Elementary Staff" alt="Cordova Elementary Staff">
-                        <img src="img/clickIcon.png">
-                        <div>
-                          <h2>Staff</h2>
-                          <h2>click here</h2>
-                        </div>
-                      </div>
-                      <div class="buttons large-3 small-12 columns end" title="Cordova Elementary Adopters" alt="Cordova Elementary Adopters">
-                        <img src="img/clickIcon.png">
-                        <div>
-                          <h2>Adopters</h2>
-                          <h2>click here</h2>
-                        </div>
-                      </div>
-                      <div class="buttons large-3 small-12 columns end" title="Cordova Elementary Activities" alt="Cordova Elementary Activities">
-                        <img src="img/clickIcon.png">
-                        <div>
-                          <h2>Activities</h2>
-                          <h2>click here</h2>
-                        </div>
-                      </div>
-                    </div> -->
-
                   </div>
                 </div>
               </div>
@@ -134,36 +82,40 @@
 
     <!-- DOWN ARROW -->
     <div id="downArr" title="Cordova Elementary Mission/News/Events">
-      <a href="#mission">
-        <p>Announcements/Calendar</p>
+      <a href="#quickLink">
+        <p>Quick Links</p>
         <img src="img/downArr.png" border="0">
       </a>
     </div>
 
 
 
-  <!-- MISSION STATEMENT -->
-    <section id="mission">
-      <div class="large-6 large-centered small-12 columns">
-        <div class="icons large-3 columns"><img src="img/linkIcon.png" alt="Link Icon"></div>
-        <h1 class="large-6 columns">Quick Links</h1>
-        <div class="graphicEle large-12 columns">
-          <img src="img/graphic.png" border="0">
+    <!-- QUICK LINKS -->
+      <section id="quickLink">
+        <div class="row">
+          <div class="large-12 small-12 columns">
+            <div class="large-6 large-centered small-12 columns">
+              <div class="icons large-3"><img src="img/linkIcon.png" alt="Link Icon"></div>
+              <h1 class="large-6">Quick Links</h1>
+              <div class="graphicEle large-12 columns">
+                <img src="img/graphicRed.png" border="0">
+              </div>
+            </div>
+            <div class="large-6 large-centered small-12 columns">
+              <div class="large-3 small-12 columns">
+                <a href="#"><h2>TRANSCRIPTS</h2></a>
+                <a href="#"><h2>UNIFORM/DRESS CODE</h2></a>
+                <a href="#"><h2>LUNCH MENU</h2></a>
+              </div>
+              <div class="large-3 small-12 columns">
+                <a href="#"><h2>GRADE SCALE</h2></a>
+                <a href="#"><h2>PARENT_CONNECT</h2></a>
+                <a href="#"><h2>SUPPLY LIST</h2></a>
+              </div>
+            </div>
+          </div>
         </div>
-      </div>
-      <div class="large-6 large-centered small-12 columns">
-        <div class="large-3 small-12 columns">
-          <a href="#"><h2>TRANSCRIPTS</h2></a>
-          <a href="#"><h2>UNIFORM/DRESS CODE</h2></a>
-          <a href="#"><h2>LUNCH MENU</h2></a>
-        </div>
-        <div class="large-3 small-12 columns">
-          <a href="#"><h2>GRADE SCALE</h2></a>
-          <a href="#"><h2>PARENT_CONNECT</h2></a>
-          <a href="#"><h2>SUPPLY LIST</h2></a>
-        </div>
-      </div>
-    </section>
+      </section>
 
 
 
@@ -178,7 +130,7 @@
               <div class="icons large-3 columns"><img src="img/newIcon.png" alt="Announcements Icon"></div>
               <h1 class="large-3 columns end">Announcements</h1>
               <div class="graphicEle large-12 columns">
-                <img src="img/graphic.png" border="0">
+                <img src="img/graphicRed.png" border="0">
               </div>
             </div>
             <div class="large-12 small-12 columns">
@@ -248,7 +200,7 @@
             <div class="icons large-3 columns"><img src="img/calendarIcon.png" alt="Calendar Icon"></div>
             <h1 class="large-3 columns end">Calendar</h1>
             <div class="graphicEle large-12 columns">
-              <img src="img/whiteGraphic.png" border="0">
+              <img src="img/graphicRed.png" border="0">
             </div>
           </div>
           <div class="large-12 small-12 columns">
@@ -301,32 +253,6 @@
               </div>
             </div>
           </div>
-
-
-          <!-- <div class="large-12 small-12 columns">
-            <div class="large-6 small-12 columns">
-              <div class="eventDate">
-                <h3>Aug</h3>
-                <h3>17</h3>
-              </div>
-              <div class="eventArticle">
-                <h3>Spelling Bee</h3>
-                <p>Congratulations to the spelling bee winners.</p>
-                <div class="readmore"><a href="#">Read more...</a></div>
-              </div>
-            </div>
-            <div class="large-6 small-12 columns">
-              <div class="eventDate">
-                <h3>Aug</h3>
-                <h3>20</h3>
-              </div>
-              <div class="eventArticle">
-                <h3>Robotics Team Wins</h3>
-                <p>1st Place Mechanical Design West TN FIRST LEGO League Championship @ The University of Memphis</p>
-                <div class="readmore"><a href="#">Read more...</a></div>
-              </div>
-            </div>
-          </div> -->
         </div>
       </div>
     </section>
@@ -336,80 +262,13 @@
 
     <!-- GLOBAL LEADERS -->
     <section id="global">
-      <div class="large-12 columns">
+      <div class="large-12">
         <h1>Developing Global<br />Leaders and Learners</h1>
         <div class="graphicEle">
-          <img src="img/whiteGraphic.png" border="0">
+          <img src="img/graphicRed.png" border="0">
         </div>
       </div>
     </section>
-
-
-
-    <!-- SUPPLY LIST -->
-    <!-- <section id="supply">
-      <div class="large-12 columns">
-        <div class="large-12 columns">
-          <a href="#" title="Kindergarten/Pre-K Supply List" alt="Kindergarten/Pre-K Supply List">
-            <div class="wrapper large-4 small-12 columns">
-              <div class="icons"><img src="img/clipboardIcon.png"></div>
-              <div>
-                <h2>Kindergarten/Pre-K Supply List</h2>
-                <h2>Click Here</h2>
-              </div>
-            </div>
-          </a>
-          <a href="#" title="1st Grade Supply List" alt="1st Grade Supply List">
-            <div class="wrapper large-4 small-12 columns">
-              <div class="icons"><img src="img/clipboardIcon.png"></div>
-              <div>
-                <h2>1st Grade Supply List</h2>
-                <h2>Click Here</h2>
-              </div>
-            </div>
-          </a>
-          <a href="#" title="2nd Grade Supply List" alt="2nd Grade Supply List">
-            <div class="wrapper large-4 small-12 columns">
-              <div class="icons"><img src="img/clipboardIcon.png"></div>
-              <div>
-                <h2>2nd Grade Supply List</h2>
-                <h2>Click Here</h2>
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="large-12 columns">
-          <a href="#" title="3rd Grade Supply List" alt="3rd Grade Supply List">
-              <div class="wrapper large-4 small-12 columns">
-                <div class="icons"><img src="img/clipboardIcon.png"></div>
-                <div>
-                  <h2>3rd Grade Supply List</h2>
-                  <h2>Click Here</h2>
-                </div>
-              </div>
-            </a>
-            <a href="#" title="4th Grade Supply List" alt="4th Grade Supply List">
-              <div class="wrapper large-4 small-12 columns">
-                <div class="icons"><img src="img/clipboardIcon.png"></div>
-                <div>
-                  <h2>4th Grade Supply List</h2>
-                  <h2>Click Here</h2>
-                </div>
-              </div>
-            </a>
-            <a href="#" title="5th Grade Supply List" alt="5th Grade Supply List">
-              <div class="wrapper large-4 small-12 columns">
-                <div class="icons"><img src="img/clipboardIcon.png"></div>
-                <div>
-                  <h2>5th Grade Supply List</h2>
-                  <h2>Click Here</h2>
-                </div>
-              </div>
-            </a>
-        </div>
-      </div>
-    </section> -->
-    <!-- END SUPPLY LIST -->
 
 
 
@@ -421,10 +280,10 @@
           <!-- NEWS -->
           <div id="article1" class="large-6 small-12 columns">
             <div id="headContainer" class="large-6 large-centered small-12 columns">
-              <div class="icons large-3 columns"><img src="img/linkIcon.png" alt="News Icon"></div>
+              <div class="icons large-3 columns"><img src="img/resourceIcon.png" alt="Resources Icon"></div>
               <h1 class="large-3 columns end">Resources</h1>
               <div class="graphicEle large-12 columns">
-                <img src="img/graphic.png" border="0">
+                <img src="img/graphicRed.png" border="0">
               </div>
             </div>
             <div class="large-12 small-12 columns">
@@ -442,7 +301,7 @@
             <div class="icons large-3 columns"><img src="img/twitIcon.png" alt="Events Icon"></div>
             <h1 class="large-3 columns end">Twitter</h1>
             <div class="graphicEle large-12 columns">
-              <img src="img/whiteGraphic.png" border="0">
+              <img src="img/graphicRed.png" border="0">
             </div>
           </div>
           <div class="large-12 small-12 columns">
@@ -461,15 +320,21 @@
         <div class="icons"><img src="img/contactIcon.png" alt="Events Icon"></div>
         <h1 class="">Contact</h1>
         <div class="graphicEle">
-          <img src="img/whiteGraphic.png" border="0">
+          <img src="img/graphicRed.png" border="0">
         </div>
       </div>
       <div id="footAddress" class="large-12 columns">
-        <div class="large-6 columns">
-
+        <div class="large-3 columns">
+          <h2>Cordova Elementary</h2>
+          <p>750 North Sanga<br />Cordova, TN 38018</p>
         </div>
-        <div class="large-6 columns">
-
+        <div class="large-3 columns">
+          <img src="img/divider.png">
+        </div>
+        <div class="large-3 columns end">
+          <p><span>Phone:</span> (901) 416-1700</p>
+          <p><span>Fax:</span> (901) 416-1701</p>
+          <p><span>School Hours:</span> 8:15 AM - 3:15 PM</p>
         </div>
       </div>
     </footer>
