Added More Changes to Website

--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
             <section class="top-bar-section">
             	<ul id="headMenu">
               	<li id="linkHome" class="currentLink slideUnder" title="Cordova Elementary Home" alt="Home"><a href="#home">Home</a></li>
-              	<li id="linkNews" class="slideUnder" title="News/Events Cordova Elementary" alt="News/Events"><a href="#quickLink" target="_blank">Announcements/Calendar</a></li>
+              	<li id="linkQuick" class="slideUnder" title="Quick Links Cordova Elementary" alt="Quick Links"><a href="#mission" target="_blank">Quick Links</a></li>
+              	<li id="linkNews" class="slideUnder" title="News/Events Cordova Elementary" alt="News/Events"><a href="#news-events" target="_blank">Announcements/Calendar</a></li>
                 <li id="linkResources" class="slideUnder" title="Cordova Elementary Resources" alt="Resources"><a href="#global" target="_blank">Resources</a></li>
               	<li class="slideUnder" title="Cordova Elementary Staff" alt="Staff"><a href="" target="_blank">Staff</a></li>
                 <li class="slideUnder" title="About Cordova Elementary" alt="About"><a href="" target="_blank">About</a></li>
@@ -82,7 +83,7 @@
 
     <!-- DOWN ARROW -->
     <div id="downArr" title="Cordova Elementary Mission/News/Events">
-      <a href="#quickLink">
+      <a href="#mission">
         <p>Quick Links</p>
         <img src="img/downArr.png" border="0">
       </a>
@@ -90,13 +91,33 @@
 
 
 
+    <!-- MISSION STATEMENT -->
+    <section id="mission">
+      <div class="row">
+        <div class="large-12 small-12 columns">
+          <div class="large-12 large-centered small-12 columns">
+            <div class="icons large-3"><img src="img/missionIcon.png" alt="Link Icon"></div>
+            <h1 class="large-9">Our Mission</h1>
+            <div class="graphicEle large-12 columns">
+              <img src="img/graphicRed.png" border="0">
+            </div>
+          </div>
+          <div class="large-12 large-centered small-12">
+            <p>The mission of Cordova Elementary School is to provide a safe and challenging environment that is committed to helping all of our students successfully achieve their maximum potential.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+
+
     <!-- QUICK LINKS -->
       <section id="quickLink">
         <div class="row">
           <div class="large-12 small-12 columns">
-            <div class="large-6 large-centered small-12 columns">
+            <div class="large-12 large-centered small-12 columns">
               <div class="icons large-3"><img src="img/linkIcon.png" alt="Link Icon"></div>
-              <h1 class="large-6">Quick Links</h1>
+              <h1 class="large-9">Quick Links</h1>
               <div class="graphicEle large-12 columns">
                 <img src="img/graphicRed.png" border="0">
               </div>
