Added Node and Gulp

--- a/index.html
+++ b/index.html
@@ -5,15 +5,14 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cordova Elementary | Cordova, TN</title>
-    <link rel="stylesheet" href="css/foundation.css">
-    <link rel="stylesheet" href="css/app.css">
-    <link rel="stylesheet" href="css/arrow.css">
+    <link rel="stylesheet" href="css/index.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Open+Sans+Condensed:300" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="js/vendor/modernizr.js"></script>
   </head>
+
   <body>
     <!-- HEADER 1 -->
     <header id="header1">
@@ -41,11 +40,11 @@
             <section class="top-bar-section">
             	<ul id="headMenu">
               	<li id="linkHome" class="currentLink slideUnder" title="Cordova Elementary Home" alt="Home"><a href="#home">Home</a></li>
-              	<li id="linkQuick" class="slideUnder" title="Quick Links Cordova Elementary" alt="Quick Links"><a href="#mission" target="_blank">Quick Links</a></li>
-              	<li id="linkNews" class="slideUnder" title="Announcements/Calendar Cordova Elementary" alt="Announcements/Calendar"><a href="#news-events" target="_blank">Announcements/Calendar</a></li>
-                <li id="linkResources" class="slideUnder" title="Cordova Elementary Resources" alt="Resources"><a href="#global" target="_blank">Resources</a></li>
-              	<li class="slideUnder" title="Cordova Elementary Staff" alt="Staff"><a href="" target="_blank">Staff</a></li>
-                <li class="slideUnder" title="About Cordova Elementary" alt="About"><a href="" target="_blank">About</a></li>
+              	<li id="linkQuick" class="slideUnder" title="Quick Links Cordova Elementary" alt="Quick Links"><a href="#mission">Quick Links</a></li>
+              	<li id="linkNews" class="slideUnder" title="Announcements/Calendar Cordova Elementary" alt="Announcements/Calendar"><a href="#news-events">Announcements/Calendar</a></li>
+                <li id="linkResources" class="slideUnder" title="Cordova Elementary Resources" alt="Resources"><a href="#global">Resources</a></li>
+              	<li class="slideUnder" title="Cordova Elementary Staff" alt="Staff"><a href="">Staff</a></li>
+                <li class="slideUnder" title="About Cordova Elementary" alt="About"><a href="">About</a></li>
              		<li id="linkContact" class="slideUnder" title="Contact Cordova Elementary" alt="Contact"><a href="#footer">Contact</a></li>
                 <li><img src="img/scs-log-small.png" title="Shelby County Schools" alt="Shelby County Schools"></li>
               </ul>
