Made Updates for RWD

--- a/index.html
+++ b/index.html
@@ -283,6 +283,7 @@
     <!-- GLOBAL LEADERS -->
     <section id="global">
       <div class="large-12">
+        <div class="icons"><img src="img/globalIcon.png" alt="Global Icon"></div>
         <h1>Developing Global<br />Leaders and Learners</h1>
         <div class="graphicEle">
           <img src="img/graphicRed.png" border="0">
