Updated Media Queries

--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
 
             <section class="top-bar-section">
             	<ul id="headMenu">
-              	<li id="linkHome" class="currentLink slideUnder" title="Cordova Elementary Home" alt="Home"><a href="#home">Home</a></li>
-              	<li id="linkQuick" class="slideUnder" title="Quick Links Cordova Elementary" alt="Quick Links"><a href="#mission">Quick Links</a></li>
-              	<li id="linkNews" class="slideUnder" title="Announcements/Calendar Cordova Elementary" alt="Announcements/Calendar"><a href="#news-events">Announcements/Calendar</a></li>
-                <li id="linkResources" class="slideUnder" title="Cordova Elementary Resources" alt="Resources"><a href="#global">Resources</a></li>
-              	<li class="slideUnder" title="Cordova Elementary Staff" alt="Staff"><a href="">Staff</a></li>
-                <li class="slideUnder" title="About Cordova Elementary" alt="About"><a href="">About</a></li>
-             		<li id="linkContact" class="slideUnder" title="Contact Cordova Elementary" alt="Contact"><a href="#footer">Contact</a></li>
+              	<li id="linkHome" class="currentLink slideUnder" title="Cordova Elementary Home" alt="Cordova Elementary Home"><a href="#home">Home</a></li>
+              	<li id="linkQuick" class="slideUnder" title="Quick Links Cordova Elementary" alt="Quick Links Cordova Elementary"><a href="#mission">Quick Links</a></li>
+              	<li id="linkNews" class="slideUnder" title="Announcements/Calendar Cordova Elementary" alt="Announcements/Calendar Cordova Elementary"><a href="#news-events">Announcements/Calendar</a></li>
+                <li id="linkResources" class="slideUnder" title="Cordova Elementary Resources" alt="Cordova Elementary Resources"><a href="#global">Resources</a></li>
+              	<li class="slideUnder" title="Cordova Elementary Staff" alt="Cordova Elementary Staff"><a href="">Staff</a></li>
+                <li class="slideUnder" title="About Cordova Elementary" alt="About Cordova Elementary"><a href="">About</a></li>
+             		<li id="linkContact" class="slideUnder" title="Contact Cordova Elementary" alt="Contact Cordova Elementary"><a href="#footer">Contact</a></li>
                 <li><img src="img/scs-log-small.png" title="Shelby County Schools" alt="Shelby County Schools"></li>
               </ul>
             </section>
@@ -81,7 +81,7 @@
 
 
     <!-- DOWN ARROW -->
-    <div id="downArr" title="Quick Links Cordova Elementary">
+    <div id="downArr" title="Quick Links Cordova Elementary" alt="Quick Links Cordova Elementary">
       <a href="#mission">
         <p>Quick Links</p>
         <img src="img/downArr.png" border="0">
@@ -116,21 +116,21 @@
           <div class="large-12 small-12 columns">
             <div class="large-12 large-centered small-12 columns">
               <div class="icons large-3"><img src="img/linkIcon.png" alt="Link Icon"></div>
-              <h1 class="large-9">Quick Links</h1>
+              <h1 class="large-9" alt="Cordova Elementary Quick Links">Quick Links</h1>
               <div class="graphicEle large-12 columns">
                 <img src="img/graphicRed.png" border="0">
               </div>
             </div>
             <div class="large-6 large-centered small-12 columns">
               <div class="large-3 small-12 columns">
-                <a href="#"><h2>TRANSCRIPTS</h2></a>
-                <a href="#"><h2>UNIFORM/DRESS CODE</h2></a>
-                <a href="#"><h2>LUNCH MENU</h2></a>
+                <a href="#"><h2 alt="TRANSCRIPTS">TRANSCRIPTS</h2></a>
+                <a href="#"><h2 alt="UNIFORM/DRESS CODE">UNIFORM/DRESS CODE</h2></a>
+                <a href="#"><h2 alt="LUNCH MENU">LUNCH MENU</h2></a>
               </div>
               <div class="large-3 small-12 columns">
-                <a href="#"><h2>GRADE SCALE</h2></a>
-                <a href="#"><h2>PARENT_CONNECT</h2></a>
-                <a href="#"><h2>SUPPLY LIST</h2></a>
+                <a href="#"><h2 alt="GRADE SCALE">GRADE SCALE</h2></a>
+                <a href="#"><h2 alt="PARENT_CONNECT">PARENT_CONNECT</h2></a>
+                <a href="#"><h2 alt="SUPPLY LIST">SUPPLY LIST</h2></a>
               </div>
             </div>
           </div>
@@ -148,7 +148,7 @@
           <div id="article1" class="large-6 small-12 columns">
             <div id="headContainer" class="large-6 large-centered small-12 columns">
               <div class="icons large-3 columns"><img src="img/newIcon.png" alt="Announcements Icon"></div>
-              <h1 class="large-3 columns end">Announcements</h1>
+              <h1 class="large-3 columns end" alt="Announcements">Announcements</h1>
               <div class="graphicEle large-12 columns">
                 <img src="img/graphicRed.png" border="0">
               </div>
@@ -157,7 +157,7 @@
               <div class="large-6 small-12 columns">
                 <div class="newsImg large-6 columns"><img src="img/img2.jpg"></div>
                 <div class="newsArticle large-6 columns">
-                  <h3>Gold-Gain School</h3>
+                  <h3 alt="Gold-Gain School">Gold-Gain School</h3>
                   <p>CES was recognized as a Gold Gain EPIC (Effective Practice Incentive Community) School for the 2009-2010 year.</p>
                   <div class="readmore"><a href="#">Read more...</a></div>
                 </div>
@@ -165,7 +165,7 @@
               <div class="large-6 small-12 columns">
                 <div class="newsImg large-6 columns"><img src="img/img1.jpg"></div>
                 <div class="newsArticle large-6 columns">
-                  <h3>Robotics Team Wins</h3>
+                  <h3 alt="Robotics Team Wins">Robotics Team Wins</h3>
                   <p>1st Place Mechanical Design West TN FIRST LEGO League Championship @ The University of Memphis</p>
                   <div class="readmore"><a href="#">Read more...</a></div>
                 </div>
@@ -177,7 +177,7 @@
             <div class="large-6 small-12 columns">
               <div class="newsImg large-6 columns"><img src="img/img3.jpg"></div>
               <div class="newsArticle large-6 columns">
-                <h3>Spelling Bee</h3>
+                <h3 alt="Spelling Bee">Spelling Bee</h3>
                 <p>Congratulations to the spelling bee winners.</p>
                 <div class="readmore"><a href="#">Read more...</a></div>
               </div>
@@ -185,9 +185,9 @@
             <div class="large-6 small-12 columns">
               <div class="newsImg large-6 columns"><img src="img/img2.jpg"></div>
               <div class="newsArticle large-6 columns">
-                <h3>Robotics Team Wins</h3>
+                <h3 alt="Robotics Team Wins">Robotics Team Wins</h3>
                 <p>1st Place Mechanical Design West TN FIRST LEGO League Championship @ The University of Memphis</p>
-                <div class="readmore"><a href="#">Read more...</a></div>
+                <div class="readmore"><a href="#" alt="Read more...">Read more...</a></div>
               </div>
             </div>
           </div>
