--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cordova Elementary | Cordova, TN</title>
+    <title>Cordova Elementary | Cordova, Tennessee</title>
     <link rel="stylesheet" href="css/index.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Open+Sans+Condensed:300" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
@@ -21,8 +21,8 @@
           <div id="socialWrap">
             <div class="phone">(901) 416-1700</div>
             <div id="social" class="icons">
-              <img src="img/facebook_logo_detail.gif" alt="">
-              <img src="img/ios_homescreen_icon.jpg" alt="">
+              <img src="img/facebookIcon.png" alt="">
+              <img src="img/twittIcon.png" alt="">
             </div>
           </div>
         </div>
@@ -40,13 +40,13 @@
             <section class="top-bar-section">
             	<ul id="headMenu">
               	<li id="linkHome" class="currentLink slideUnder" title="Cordova Elementary Home" alt="Cordova Elementary Home"><a href="#home">Home</a></li>
-              	<li id="linkQuick" class="slideUnder" title="Quick Links Cordova Elementary" alt="Quick Links Cordova Elementary"><a href="#mission">Quick Links</a></li>
+              	<li id="linkQuick" class="slideUnder" title="Quick Links for Cordova Elementary" alt="Quick Links for Cordova Elementary"><a href="#mission">Quick Links</a></li>
               	<li id="linkNews" class="slideUnder" title="Announcements/Calendar Cordova Elementary" alt="Announcements/Calendar Cordova Elementary"><a href="#news-events">Announcements/Calendar</a></li>
                 <li id="linkResources" class="slideUnder" title="Cordova Elementary Resources" alt="Cordova Elementary Resources"><a href="#global">Resources</a></li>
               	<li class="slideUnder" title="Cordova Elementary Staff" alt="Cordova Elementary Staff"><a href="">Staff</a></li>
                 <li class="slideUnder" title="About Cordova Elementary" alt="About Cordova Elementary"><a href="">About</a></li>
              		<li id="linkContact" class="slideUnder" title="Contact Cordova Elementary" alt="Contact Cordova Elementary"><a href="#footer">Contact</a></li>
-                <li><img src="img/scs-log-small.png" title="Shelby County Schools" alt="Shelby County Schools"></li>
+                <li><a href="http://www.scsk12.org/"><img src="img/scs-log-small.png" title="Shelby County Schools in Memphis, Tennessee" alt="Shelby County Schools in Memphis, Tennessee"></a></li>
               </ul>
             </section>
           </nav>
@@ -67,6 +67,7 @@
                       <img src="img/graphicRed.png" border="0">
                     </div>
                     <h2>Home of the cougar cubs</h2>
+                    <div class="opSchools"><a href=""><img src="img/opitonalschools.jpg" title="Cordova Elementary is an Optional School" alt="Cordova Elementary is an Optional School"></a></div>
                   </div>
                 </div>
               </div>
@@ -81,7 +82,7 @@
 
 
     <!-- DOWN ARROW -->
-    <div id="downArr" title="Quick Links Cordova Elementary" alt="Quick Links Cordova Elementary">
+    <div id="downArr" title="Quick Links for Cordova Elementary" alt="Quick Links for Cordova Elementary">
       <a href="#mission">
         <p>Quick Links</p>
         <img src="img/downArr.png" border="0">
@@ -102,7 +103,7 @@
             </div>
           </div>
           <div class="large-12 large-centered small-12">
-            <p>The mission of Cordova Elementary School is to provide a safe and challenging environment that is committed to helping all of our students successfully achieve their maximum potential.</p>
+            <p>The mission of Cordova Elementary School is to provide a safe and challenging environment that is committed to helping all of our students successfully achieve their maximum potential.<span class="readmore"><a href="#"> Read more...</a></span></p>
           </div>
         </div>
       </div>
@@ -116,7 +117,7 @@
           <div class="large-12 small-12 columns">
             <div class="large-12 large-centered small-12 columns">
               <div class="icons large-3"><img src="img/linkIcon.png" alt="Link Icon"></div>
-              <h1 class="large-9" alt="Cordova Elementary Quick Links">Quick Links</h1>
+              <h1 class="large-9">Quick Links</h1>
               <div class="graphicEle large-12 columns">
                 <img src="img/graphicRed.png" border="0">
               </div>
@@ -148,7 +149,7 @@
           <div id="article1" class="large-6 small-12 columns">
             <div id="headContainer" class="large-6 large-centered small-12 columns">
               <div class="icons large-3 columns"><img src="img/newIcon.png" alt="Announcements Icon"></div>
-              <h1 class="large-3 columns end" alt="Announcements">Announcements</h1>
+              <h1 class="large-3 columns end">Announcements</h1>
               <div class="graphicEle large-12 columns">
                 <img src="img/graphicRed.png" border="0">
               </div>
@@ -157,7 +158,7 @@
               <div class="large-6 small-12 columns">
                 <div class="newsImg large-6 columns"><img src="img/img2.jpg"></div>
                 <div class="newsArticle large-6 columns">
-                  <h3 alt="Gold-Gain School">Gold-Gain School</h3>
+                  <h3>Gold-Gain School</h3>
                   <p>CES was recognized as a Gold Gain EPIC (Effective Practice Incentive Community) School for the 2009-2010 year.</p>
                   <div class="readmore"><a href="#">Read more...</a></div>
                 </div>
@@ -165,7 +166,7 @@
               <div class="large-6 small-12 columns">
                 <div class="newsImg large-6 columns"><img src="img/img1.jpg"></div>
                 <div class="newsArticle large-6 columns">
-                  <h3 alt="Robotics Team Wins">Robotics Team Wins</h3>
+                  <h3>Robotics Team Wins</h3>
                   <p>1st Place Mechanical Design West TN FIRST LEGO League Championship @ The University of Memphis</p>
                   <div class="readmore"><a href="#">Read more...</a></div>
                 </div>
@@ -177,7 +178,7 @@
             <div class="large-6 small-12 columns">
               <div class="newsImg large-6 columns"><img src="img/img3.jpg"></div>
               <div class="newsArticle large-6 columns">
-                <h3 alt="Spelling Bee">Spelling Bee</h3>
+                <h3>Spelling Bee</h3>
                 <p>Congratulations to the spelling bee winners.</p>
                 <div class="readmore"><a href="#">Read more...</a></div>
               </div>
@@ -185,7 +186,7 @@
             <div class="large-6 small-12 columns">
               <div class="newsImg large-6 columns"><img src="img/img2.jpg"></div>
               <div class="newsArticle large-6 columns">
-                <h3 alt="Robotics Team Wins">Robotics Team Wins</h3>
+                <h3>Robotics Team Wins</h3>
                 <p>1st Place Mechanical Design West TN FIRST LEGO League Championship @ The University of Memphis</p>
                 <div class="readmore"><a href="#" alt="Read more...">Read more...</a></div>
               </div>
