Added Optional Schools Logo

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               	<li class="slideUnder" title="Cordova Elementary Staff" alt="Cordova Elementary Staff"><a href="">Staff</a></li>
                 <li class="slideUnder" title="About Cordova Elementary" alt="About Cordova Elementary"><a href="">About</a></li>
              		<li id="linkContact" class="slideUnder" title="Contact Cordova Elementary" alt="Contact Cordova Elementary"><a href="#footer">Contact</a></li>
-                <li><a href="http://www.scsk12.org/"><img src="img/scs-log-small.png" title="Shelby County Schools in Memphis, Tennessee" alt="Shelby County Schools in Memphis, Tennessee"></a></li>
+                <li><a href="http://www.scsk12.org/" target="_blank"><img src="img/scs-log-small.png" title="Shelby County Schools in Memphis, Tennessee" alt="Shelby County Schools in Memphis, Tennessee"></a></li>
               </ul>
             </section>
           </nav>
@@ -67,7 +67,7 @@
                       <img src="img/graphicRed.png" border="0">
                     </div>
                     <h2>Home of the cougar cubs</h2>
-                    <div class="opSchools"><a href=""><img src="img/opitonalschools.jpg" title="Cordova Elementary is an Optional School" alt="Cordova Elementary is an Optional School"></a></div>
+                    <div class="opSchools"><a href="http://www.scsk12.org/optional/" target="_blank"><img src="img/opslogo2.png" title="Cordova Elementary is an Optional School" alt="Cordova Elementary is an Optional School"></a></div>
                   </div>
                 </div>
               </div>
