Made More Updates

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cordova Elementary | Cordova, Tennessee</title>
+    <title>Cordova Elementary in Cordova, Tennessee</title>
     <link rel="stylesheet" href="css/index.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Open+Sans+Condensed:300" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
@@ -19,16 +19,16 @@
         <!-- SOCIAL MEDIA AND PHONE NUMBER -->
         <div id="socialNumber">
           <div id="socialWrap">
-            <div class="phone">(901) 416-1700</div>
+            <div class="phone" alt="Cordova Elementary's phone number">(901) 416-1700</div>
             <div id="social" class="icons">
-              <img src="img/facebookIcon.png" alt="">
-              <img src="img/twittIcon.png" alt="">
+              <a href="https://www.facebook.com/CordovaElementary?_rdr=p"><img src="img/facebookIcon.png" alt="Cordova Elementary's Facebook Page www.facebook.com/CordovaElementary"></a>
+              <a href="https://twitter.com/CordovaCubs"><img src="img/twittIcon.png" alt="Cordova Elementary's Twitter Page www.twitter.com/CordovaCubs"></a>
             </div>
           </div>
         </div>
 
         <!-- LOGO 1 -->
-      	<div class="logos large-3 medium-3 small-3 columns"><a href="index.html"><img src="img/logo2.png" title="Cordova Elementary School" alt="Cordova Elementary School" border="0"></a></div>
+      	<div class="logos large-3 medium-3 small-3 columns"><a href="index.html"><img src="img/logo2.png" title="Cordova Elementary School" alt="Cordova Elementary Home Page" border="0"></a></div>
 
           <!-- NAVIGATION 1 -->
           <nav class="top-bar large-9 small-9 columns" data-topbar>
@@ -46,7 +46,7 @@
               	<li class="slideUnder" title="Cordova Elementary Staff" alt="Cordova Elementary Staff"><a href="">Staff</a></li>
                 <li class="slideUnder" title="About Cordova Elementary" alt="About Cordova Elementary"><a href="">About</a></li>
              		<li id="linkContact" class="slideUnder" title="Contact Cordova Elementary" alt="Contact Cordova Elementary"><a href="#footer">Contact</a></li>
-                <li><a href="http://www.scsk12.org/" target="_blank"><img src="img/scs-log-small.png" title="Shelby County Schools in Memphis, Tennessee" alt="Shelby County Schools in Memphis, Tennessee"></a></li>
+                <li><a href="http://www.scsk12.org/" target="_blank"><img src="img/scs-log-small.png" title="Shelby County Schools in Memphis, Tennessee" alt="Shelby County Schools in Memphis, Tennessee www.scsk12.org"></a></li>
               </ul>
             </section>
           </nav>
@@ -67,7 +67,7 @@
                       <img src="img/graphicRed.png" border="0">
                     </div>
                     <h2>Home of the cougar cubs</h2>
-                    <div class="opSchools"><a href="http://www.scsk12.org/optional/" target="_blank"><img src="img/opslogo2.png" title="Cordova Elementary is an Optional School" alt="Cordova Elementary is an Optional School"></a></div>
+                    <div class="opSchools"><a href="http://www.scsk12.org/optional/" target="_blank"><img src="img/opslogo2.png" title="Cordova Elementary is an Optional School" alt="Cordova Elementary is an Optional School www.scsk12.org/optional"></a></div>
                   </div>
                 </div>
               </div>
@@ -75,15 +75,24 @@
           </div>
         </div>
 
-      <div id="bckRotate"><img src="img/ce_HeroImg2.jpg"></div>
+      <!-- <div id="bckRotate"><img src="img/ce_HeroImg2.jpg"></div> -->
+
+      <div id="bck">
+          <ul id="bckRotate">
+            <li><img src="img/ce_HeroImg2.jpg"></li>
+            <li><img src="img/ce_HeroImg.jpg"></li>
+            <li><img src="img/ce_HeroImg3.jpg"></li>
+            <li><img src="img/ce_HeroImg4.jpg"></li>
+          </ul>
+      </div>
     </section>
     <!-- END HOME -->
 
 
 
     <!-- DOWN ARROW -->
-    <div id="downArr" title="Quick Links for Cordova Elementary" alt="Quick Links for Cordova Elementary">
-      <a href="#mission">
+    <div id="downArr">
+      <a href="#mission" title="Quick Links for Cordova Elementary" alt="Quick Links for Cordova Elementary">
         <p>Quick Links</p>
         <img src="img/downArr.png" border="0">
       </a>
@@ -363,7 +372,7 @@
 
     <script src="js/vendor/jquery.js"></script>
     <script src="js/foundation.min.js"></script>
-    <script src="js/app.js"></script>
+    <script src="js/mini-app.js"></script>
     <script>
       $(document).foundation();
     </script>
