Updated for RWD

--- a/index.html
+++ b/index.html
@@ -46,10 +46,11 @@
               	<li class="slideUnder" title="Cordova Elementary Staff" alt="Cordova Elementary Staff"><a href="">Staff</a></li>
                 <li class="slideUnder" title="About Cordova Elementary" alt="About Cordova Elementary"><a href="">About</a></li>
              		<li id="linkContact" class="slideUnder" title="Contact Cordova Elementary" alt="Contact Cordova Elementary"><a href="#footer">Contact</a></li>
-                <li><a href="http://www.scsk12.org/" target="_blank"><img src="img/scs-log-small.png" title="Shelby County Schools in Memphis, Tennessee" alt="Shelby County Schools in Memphis, Tennessee www.scsk12.org"></a></li>
               </ul>
             </section>
           </nav>
+
+          <div class="scsLogo"><a href="http://www.scsk12.org/" target="_blank"><img src="img/scs-log-small.png" title="Shelby County Schools in Memphis, Tennessee" alt="Shelby County Schools in Memphis, Tennessee www.scsk12.org"></a></div>
       </header>
 
 
@@ -346,7 +347,7 @@
 
 
 
-    <footer id="footer">
+    <footer id="footer"class="row">
       <div id="footContact" class="large-12 columns">
         <div class="icons"><img src="img/contactIcon.png" alt="Events Icon"></div>
         <h1 class="">Contact</h1>
